MIFOSX-1252 Changes for Savings Officer API Doc

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -19172,10 +19172,10 @@ Request Body:
 Content-Type: application/json
 Request Body:
 {
-	assignmentDate : "04 September 2014"
-	dateFormat : "dd MMMM yyyy"
-	fromSavingsOfficerId : ""
-	locale : "en"
+	assignmentDate : "04 September 2014",
+	dateFormat : "dd MMMM yyyy",
+	fromSavingsOfficerId : "",
+	locale : "en",
 	toSavingsOfficerId : 2
 }
 			</code>
@@ -19202,8 +19202,8 @@ Request Body:
 Content-Type: application/json
 Request Body:
 {
-	dateFormat : "dd MMMM yyyy"
-	locale : "en"
+	dateFormat : "dd MMMM yyyy",
+	locale : "en",
 	unassignedDate : "05 September 2014"
 }				
 			</code>
