cleaning up MIFOSX-1463

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -8830,6 +8830,7 @@ GET https://DomainName/api/v1/loans/{loanId}/transactions/{transactionId}
     5,
     14
   ],
+  "manuallyReversed": false,
   "currency": {
     "code": "USD",
     "name": "US Dollar",
