commit for MIFOSX-1639 (Auto create standing instruction at loan disbursement)

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -7961,7 +7961,7 @@ Request Body:
 						</tr>
 						<tr class=alt>
 							<td>graceOnPrincipalPayment, graceOnInterestPayment, graceOnInterestCharged, linkAccountId,
-								 fixedEmiAmount, maxOutstandingLoanBalance, disbursementData, graceOnArrearsAgeing
+								 fixedEmiAmount, maxOutstandingLoanBalance, disbursementData, graceOnArrearsAgeing, createStandingInstructionAtDisbursement (requires linkedAccountId if set to true)
 							</td>
 						</tr>
 					</table>
