Option to change approved amount during loan approval

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -8023,6 +8023,15 @@ Request Body:
 							<td>approvedOnDate</td>
 						</tr>
 					</table>
+				</br>
+					<table class=matrixHeading>
+						<tr class="matrixHeadingBG">
+							<td><div class="mifosXHeading2">Optional Fields</div></td>
+						</tr>
+						<tr class=alt>
+							<td>approvedLoanAmount</td>
+						</tr>
+					</table>
 				</div>
 				<div class="method-example">
 					<code class="method-declaration">
