updating api docs with detail s of newly added parameter for loan products `minimumDaysBetweenDisbursalAndFirstRepayment`

--- a/api-docs/apiLive.htm
+++ b/api-docs/apiLive.htm
@@ -10739,6 +10739,15 @@ Request Body:
 							<td class=fielddesc>Variations for loan, based on borrower cycle number
 							</td>
 						</tr>
+						<tr class=alt>
+							<td>minimumDaysBetweenDisbursalAndFirstRepayment</td>
+						</tr>
+						<tr>
+							<td class=fielddesc>The minimum number of days allowed between a Loan disbursal and its first repayment.
+							</td>
+						</tr>
+
+						
 
 
 <tr class=alt>
